[package]
name = "tb_mapper_ext"
description = "thin-edge thingsboard extension adding support for thingsboard data model"
version = { workspace = true }
authors = [ "TheBlueFireFox <Adrian Hornung>" ]
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clock = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tedge_actors = { workspace = true }
tedge_api = { workspace = true }
tedge_config = { workspace = true }
tedge_mqtt_ext = { workspace = true }
tedge_utils = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
assert_matches = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["macros"] }

[lints]
workspace = true
